--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,21 +9,23 @@
 
     <Button
         android:id="@+id/buttonA"
-        android:text="ボタンA"
+        android:text="明示的intent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constrainedTop_toTop="parent"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonB" />
 
     <Button
         android:id="@+id/buttonB"
-        android:text="ボタンB"
+        android:text="暗黙的intent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constrainedTop_toTop="@+id/buttonA"
+        app:layout_constraintTop_toTopOf="@id/buttonA"
         app:layout_constraintStart_toEndOf="@+id/buttonA"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView1"
@@ -41,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="これは最初は標示されている"
+        app:layout_constraintStart_toStartOf="@id/textView1"
         app:layout_constraintTop_toBottomOf="@+id/textView1"
         tools:layout_constraintStart_toStartOf="@+id/textView1" />
 
@@ -50,7 +53,28 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="これは最初は標示されている"
+        app:layout_constraintStart_toStartOf="@id/textView1"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_constraintStart_toStartOf="@+id/textView2" />
+        tools:layout_constraintStart_toStartOf="@+id/textView1" />
 
+    <Button
+        android:id="@+id/buttonC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        app:layout_constraintTop_toTopOf="@id/editText1"
+        app:layout_constraintStart_toEndOf="@id/editText1"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:text="None"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView3"
+        app:layout_constraintEnd_toStartOf="@id/buttonC" />
 </androidx.constraintlayout.widget.ConstraintLayout>
