--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="7"
+        android:layout_marginStart="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button8"
         tools:layout_editor_absoluteX="67dp"
@@ -46,7 +47,6 @@
         android:layout_marginStart="12dp"
         app:layout_constraintTop_toTopOf="@+id/button7"
         app:layout_constraintStart_toEndOf="@id/button9"
-        app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteX="329dp"
         tools:layout_editor_absoluteY="270dp" />
 
@@ -55,8 +55,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="4"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/button7"
-        app:layout_constraintStart_toStartOf="@id/button7"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button5"
         tools:layout_editor_absoluteX="4dp"
         tools:layout_editor_absoluteY="361dp" />
@@ -96,6 +97,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/button4"
+        app:layout_constraintStart_toStartOf="@id/button7"
         tools:layout_editor_absoluteX="7dp"
         tools:layout_editor_absoluteY="376dp" />
 
@@ -125,20 +129,17 @@
         android:layout_height="wrap_content"
         android:text="-"
         app:layout_constraintTop_toTopOf="@id/button1"
-        app:layout_constraintStart_toStartOf="@id/button_divided"
-        tools:layout_editor_absoluteX="305dp"
-        tools:layout_editor_absoluteY="376dp" />
+        app:layout_constraintStart_toStartOf="@id/button_divided" />
 
     <Button
         android:id="@+id/button_AC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="AC"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/button1"
-        app:layout_constraintStart_toStartOf="@id/button7"
-        app:layout_constraintEnd_toStartOf="@+id/button0"
-        tools:layout_editor_absoluteX="11dp"
-        tools:layout_editor_absoluteY="468dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button0" />
 
     <Button
         android:id="@+id/button0"
