--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -170,4 +170,17 @@
         app:layout_constraintStart_toStartOf="@id/button_divided"
         tools:layout_editor_absoluteX="323dp"
         tools:layout_editor_absoluteY="462dp" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:textSize="32dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
